src/main/kotlin/es/atrujillo/sample/funwalletms/domain/errors/TransactionErrors.kt
package es.atrujillo.sample.funwalletms.domain.errors

